test/haskell2010/conformance/negative/invalid-default-type.hs
module Main where

default (Bool)

main :: Int
main = 1
